--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,5 +1,5 @@
 <footer id="footer" class="footer">
     <div class="copyright">
-        <span>© <%= config.author %> | Powered by <a href="https://hexo.io" target="_blank">Hexo</a> & <a href="https://github.com/Siricee/hexo-theme-Chic" target="_blank">Chic</a></span>
+        <span>&copy; <%= config.author %> 2016-<%= new Date().getFullYear() %>. All rights reserved. | <a href="http://beian.miit.gov.cn" target="_blank">粤ICP备17050016号-2</a></span>
     </div>
 </footer>
