--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -2,11 +2,13 @@
 <html lang="<%= config.language %>">
 <head>
     <%- partial('_partial/head',{cache: true}) %>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 <body>
     <div class="wrapper">
         <%- partial('_partial/header',{cache: true}) %>
         <div class="main">
+            <%- partial('_partial/totop') %>
             <%- body %>
         </div>
         <%- partial('_partial/footer',{cache: true}) %>
