--- a/layout/_page/post.ejs
+++ b/layout/_page/post.ejs
@@ -70,15 +70,15 @@
                 <span class="tag">
                     <% if(page.tags.length!==0){%>
                     <% page.tags.forEach(item=>{ %>
-                        <a href="<%- url_for(item.path) %>"># <%- item.name %></a>
+                        <a href="<%- url_for(item.path) %>">#<%- item.name %></a> <span>/</span>
                     <% }) %>
                         <% } %>
                 </span>
             </div>
             <div>
-                <a href="javascript:window.history.back();">back</a>
+                <a href="javascript:window.history.back();"><i class="fas fa-arrow-left"></i></a>
                 <span>· </span>
-                <a href="<%- config.root %>">home</a>
+                <a href="<%- config.root %>"><i class="fas fa-home"></i></a>
             </div>
         </section>
         <section class="post-nav">
